test and dev envs by docker

--- a/app/Makefile
+++ b/app/Makefile
@@ -18,3 +18,9 @@ heroku-logs:
 
 prepare-env:
 	cp -n .env.example .env
+
+docker-test:
+	docker-compose -f docker-compose.yml up --abort-on-container-exit --exit-code-from app
+
+docker-dev:
+	docker-compose up
