--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -3,7 +3,9 @@ services:
   app:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.production
     command: make test
     volumes:
       - ".:/app"
+    image:
+      vladislav1923/devops-for-programmers-project-lvl1
