build and push docker image action

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -7,4 +7,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - run: cd app && npm install && make docker-test
+      - name: run tests
+        run: cd app && npm install && make ci
+
+      - name: build docker image
+        run: make docker-build
+
+      - name: push docker image
+        run: make docker-push
