--- a/app/Makefile
+++ b/app/Makefile
@@ -19,8 +19,14 @@ heroku-logs:
 prepare-env:
 	cp -n .env.example .env
 
-docker-test:
+ci:
 	docker-compose -f docker-compose.yml up --abort-on-container-exit --exit-code-from app
 
 docker-dev:
 	docker-compose up
+
+docker-build:
+    docker-compose -f docker-compose.yml build app
+
+docker-push:
+    docker-compose -f docker-compose.yml push app
