--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -11,7 +11,7 @@ jobs:
         run: cd app && npm install && make ci
 
       - name: Build docker image
-        run: make docker-build
+        run: cd app && make docker-build
 
       - name: Push docker image
-        run: make docker-push
+        run: cd app && make docker-push
