--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -2,20 +2,20 @@ name: push-check
 
 on: push
 jobs:
-  setup:
+  ci:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-  tests:
-    steps:
-      - run: cd app && npm install && make ci
-    needs: setup
-  build:
-    steps:
-      - run: cd app && make docker-build
-    needs: setup
-  push:
-    steps:
-      - run: cd app && make docker-push
-    needs: build
+
+      - name: Run tests
+        run: cd app && npm install && make ci
+
+      - name: Build docker image
+        run: cd app && make docker-build
+
+      - name: Docker login
+        run: docker login --username=${{ secrets.DOCKER_ID }} --password=${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Push docker image
+        run: cd app && make docker-push
 
