--- a/.github/workflows/push-check.yml
+++ b/.github/workflows/push-check.yml
@@ -8,14 +8,14 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Run tests
-        run: cd app && npm install && make ci
+        run: make docker-tests
 
       - name: Build docker image
-        run: cd app && make docker-build
+        run: make docker-build
 
       - name: Docker login
         run: docker login --username=${{ secrets.DOCKER_ID }} --password=${{ secrets.DOCKER_PASSWORD }}
 
       - name: Push docker image
-        run: cd app && make docker-push
+        run: make docker-push
 
