--- a/app/Dockerfile.production
+++ b/app/Dockerfile.production
@@ -2,8 +2,8 @@ FROM node:14.18.1
 
 WORKDIR /app
 
-COPY ./package.json package.json
-COPY ./package-lock.json package-lock.json
+COPY package.json package.json
+COPY package-lock.json package-lock.json
 
 RUN npm ci
 
