--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -2,11 +2,11 @@ version: "3"
 services:
   app:
     build:
-      context: .
+      context: app
       dockerfile: Dockerfile
     command: >
       bash -c "make setup && make dev"
     volumes:
-      - ".:/app"
+      - "./app:/app"
     ports:
       - "8080:8080"
