--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,11 @@ version: "3"
 services:
   app:
     build:
-      context: .
+      context: app
       dockerfile: Dockerfile.production
-    command: make test
+    command: >
+      bash -c "make test"
     volumes:
-      - ".:/app"
+      - "./app:/app"
     image:
       vladislav1923/devops-for-programmers-project-lvl1
