--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -6,7 +6,26 @@ services:
       dockerfile: Dockerfile
     command: >
       bash -c "make setup && make dev"
-    volumes:
-      - "./app:/app"
     ports:
       - "8080:8080"
+    volumes:
+      - "./app:/app"
+
+  caddy:
+    image: caddy
+    restart: unless-stopped
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - "./services/caddy/Caddyfile:/etc/caddy/Caddyfile"
+      - "./public:/etc/caddy/public"
+      - caddy_data:/data
+      - caddy_config:/config
+    depends_on:
+      - app
+
+volumes:
+  caddy_data:
+    external: true
+  caddy_config:
