--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -4,12 +4,13 @@ services:
     build:
       context: app
       dockerfile: Dockerfile
-    command: >
-      bash -c "make setup && make dev"
+    command: bash -c 'sleep 3 && npm start'
     ports:
       - "8080:8080"
     volumes:
       - "./app:/app"
+    depends_on:
+      - db
 
   caddy:
     image: caddy
