--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,16 @@ services:
     build:
       context: app
       dockerfile: Dockerfile.production
-    command: >
-      bash -c "npm install && make test"
+    command: bash -c "npm install && make test"
     volumes:
       - "./app:/app"
     image:
       vladislav1923/devops-for-programmers-project-lvl1
+    depends_on:
+      - db
+
+  db:
+    image: postgres
+    environment:
+      POSTGRES_USER: ${DATABASE_USERNAME}
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
