--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,15 @@
 version: "3"
 services:
+  db:
+    image: postgres
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
+      POSTGRES_HOST_AUTH_METHOD: trust
+    volumes:
+      - "pgdata:/var/lib/postgresql/data"
+
   app:
     build:
       context: app
@@ -12,8 +22,5 @@ services:
     depends_on:
       - db
 
-  db:
-    image: postgres
-    environment:
-      POSTGRES_USER: ${DATABASE_USERNAME}
-      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
+volumes:
+  pgdata:
