--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -4,13 +4,18 @@ services:
     build:
       context: app
       dockerfile: Dockerfile
-    command: bash -c 'sleep 3 && npm start'
+    command: bash -c 'npm start'
     ports:
       - "8080:8080"
     volumes:
       - "./app:/app"
     depends_on:
       - db
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   caddy:
     image: caddy
