add caddy volumes to docker compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       POSTGRES_USER: ${DATABASE_USERNAME}
       POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
       POSTGRES_HOST_AUTH_METHOD: trust
+    volumes:
+      - "pgdata:/var/lib/postgresql/data"
 
   app:
     build:
@@ -21,3 +23,9 @@ services:
       vladislav1923/devops-for-programmers-project-lvl1
     depends_on:
       - db
+
+volumes:
+  pgdata:
+  caddy_data:
+    external: true
+  caddy_config:
