--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -26,6 +26,7 @@ services:
     volumes:
       - "./services/caddy/Caddyfile:/etc/caddy/Caddyfile"
       - "./public:/etc/caddy/public"
+      - caddy_data:/data
       - caddy_config:/config
     depends_on:
       - app
